fix(ui): resolve verse container shadow overflow in mobile view
Closes #8

--- a/src/app/features/lessons/interactive-lesson/interactive-lesson-dark.scss
+++ b/src/app/features/lessons/interactive-lesson/interactive-lesson-dark.scss
@@ -170,7 +170,6 @@ $tajweed-rules: (
     height: 65vh;
     display: flex;
     align-items: center;
-    overflow: hidden;
     cursor: grab;
     margin-bottom: 30px;
 
