--- a/src/app/features/lessons/interactive-lesson/interactive-lesson-light.scss
+++ b/src/app/features/lessons/interactive-lesson/interactive-lesson-light.scss
@@ -134,7 +134,6 @@ $tajweed-rules: (
     height: 65vh;
     display: flex;
     align-items: center;
-    overflow: hidden;
     cursor: grab;
     margin-bottom: 30px;
     z-index: 1;
